--- a/prova3infinity.html
+++ b/prova3infinity.html
@@ -3,39 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prova3</title>
+    <title>Tabela</title>
   </head>
-  <body style="background-color: black;">
-    <header style="background-color: rgb(255, 0, 0);">
-      <div><h1>prova da terceira aula de HTML</h1></div>
-      <div>
-        <h3>
-          A Infinity School te contratou para desenvolver uma tela de login para
-          o acesso ao portal (Onde se encontra o material das aulas), a escola
-          pediu que essa tela tenha dois campos de entrada, um para o email e
-          outro para a senha, um botão escrito "ENTRAR" e, um link com o texto
-          "Esqueceu sua senha". As cores dessa tela devem ser preto e vermelho.
-        </h3>
-      </div>
-      <div><h2>tela de login (Portal do aluno):</h2></div>
-    </header>
-    <main style="background-color: rgb(255, 0, 0);">
-      <div>
-        <label for="">Email:</label>
-        <input type="email" name="" id="" />
-      </div>
-      <br />
-      <div>
-        <label for="">Senha:</label>
-        <input type="password" name="" id="" />
-      </div>
-      <br />
-      <button type="submit">Entrar</button><br />
-      <br />
-      <a href="">Esqueceu sua senha</a>
-    </main>
-    <footer style="background-color: rgb(255, 0, 0);">
-        <p>© 2023 Minha página web</p>
-    </footer>
+  <body>
+    <h1>prova da terceira aula de HTML</h1>
+    <p>
+      1) [H/C-A03] Crie uma tabela HTML que represente um calendário mensal
+      simples. A tabela deve ter 7 colunas (uma para cada dia da semana) e pelo
+      menos 5 linhas (para representar semanas). Inclua cabeçalhos de coluna com
+      os nomes dos dias da semana.
+    </p>
+    <table border="2">
+      <td colspan="7">calendário Junho 2024</td>
+      <tr>
+        <th>domingo</th>
+        <th>Segunda</th>
+        <th>Terça</th>
+        <th>Quarta</th>
+        <th>Quinta</th>
+        <th>Sexta</th>
+        <th>Sábado</th>
+      </tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>01</td>
+      <tr>
+        <td>02</td>
+        <td>03</td>
+        <td>04</td>
+        <td>05</td>
+        <td>06</td>
+        <td>07</td>
+        <td>08</td>
+      </tr>
+      <td>9</td>
+      <td>10</td>
+      <td>11</td>
+      <td>12</td>
+      <td>13</td>
+      <td>14</td>
+      <td>15</td>
+      <tr>
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <td>23</td>
+      <td>24</td>
+      <td>25</td>
+      <td>26</td>
+      <td>27</td>
+      <td>28</td>
+      <td>29</td>
+      <tr>
+        <td>30</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
   </body>
 </html>
