--- a/prova5infinity.html
+++ b/prova5infinity.html
@@ -65,16 +65,16 @@
       </h2>
       <form action="#" method="post">
         <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" required />
+        <input type="text" id="seunome" name="nome" required />
   
         <label for="birthdate">Data de Nascimento:</label>
-        <input type="date" id="birthdate" name="birthdate" required />
+        <input type="date" id="suadata" name="data" required />
   
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="seuemail" name="email" required />
   
         <label for="message">campo de texto:</label>
-        <textarea id="message" name="message" rows="4"></textarea>
+        <textarea id="addmensagem" name="mensagem" rows="4"></textarea>
   
         <button type="submit">Enviar</button>
       </form>
