--- a/CSS/prova6.html
+++ b/CSS/prova6.html
@@ -1,64 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsividade e Cores</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página Responsiva com Cores</title>
     <style>
-      :root {
-        --cor-fundo: #f0f8ff;
-        --cor-primaria: #007bff;
-        --cor-secundaria: #6c757d;
-        --cor-texto: #333;
-      }
+        :root {
+            --cor-fundo: #f0f0f0;
+            --cor-texto: #333333;
+            --cor-primaria: #4CAF50;
+            --cor-secundaria: #FFC107;
+        }
 
-      body {
-        font-family: Arial, sans-serif;
-        background-color: var(--cor-fundo);
-        color: var(--cor-texto);
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-
-      .container {
-        text-align: center;
-        padding: 2rem;
-        background-color: var(--cor-primaria);
-        color: white;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      @media (max-width: 768px) {
         body {
-          font-size: 4vw;
+            background-color: var(--cor-fundo);
+            color: var(--cor-texto);
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
-        .container {
-          width: 90%;
-          padding: 1rem;
-        }
-      }
 
-      @media (min-width: 769px) {
-        body {
-          font-size: 1rem;
+        header {
+            background-color: var(--cor-primaria);
+            width: 100%;
+            padding: 1rem;
+            text-align: center;
         }
-        .container {
-          width: 50%;
+
+        h1 {
+            color: var(--cor-secundaria);
+            font-size: 2rem;
+            margin: 0;
         }
-      }
+
+        main {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 1rem;
+        }
+
+        p {
+            color: var(--cor-primaria);
+            font-size: 1rem;
+            margin: 20px;
+        }
+
+        footer {
+            background-color: var(--cor-primaria);
+            width: 100%;
+            padding: 1rem;
+            text-align: center;
+            color: var(--cor-secundaria);
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            p {
+                font-size: 0.875rem;
+            }
+        }
     </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Bem-vindo!</h1>
-      <p>
-        Este é um exemplo de como aplicar responsividade e cores usando CSS.
-      </p>
-    </div>
-  </body>
+</head>
+<body>
+    <header>
+        <h1>Página Responsiva</h1>
+    </header>
+    <main>
+        <p>Este é um exemplo de página que usa media queries e variáveis CSS para cores.</p>
+        <p>O layout se adapta a diferentes dispositivos, garantindo uma boa experiência de usuário.</p>
+    </main>
+    <footer>
+        &copy; 2024 Meu Site Responsivo
+    </footer>
+</body>
 </html>
